stuff/podman-k8s/runme/02-namespaces.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: httpbin-a
---
kind: Namespace
apiVersion: v1
metadata:
  name: httpbin-b
