stuff/podman-k8s/runme/05-envoy.yaml
kind: ConfigMap
apiVersion: v1
metadata:
  name: envoy-config
  namespace: default
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - name: listener_0
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 10000
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: ingress_http
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: httpbin
                          domains: ["*"]
                          routes:
                            - match: { prefix: "/a" }
                              route: { host_rewrite_literal: "httpbin-a.local", cluster: ingress }
                            - match: { prefix: "/b" }
                              route: { host_rewrite_literal: "httpbin-b.local", cluster: ingress }
                    http_filters:
                      - name: envoy.filters.http.router
      clusters:
        - name: ingress
          connect_timeout: 0.25s
          type: logical_dns
          lb_policy: round_robin
          load_assignment:
            cluster_name: ingress
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: ingress-nginx-controller.ingress-nginx.svc.cluster.local
                          port_value: 80
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: envoy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.29-latest
          args: [ "-c", "/etc/envoy/envoy.yaml" ]
          ports:
            - containerPort: 10000
          volumeMounts:
            - name: envoy-config
              mountPath: /etc/envoy
      volumes:
        - name: envoy-config
          configMap:
            name: envoy-config
---
kind: Service
apiVersion: v1
metadata:
  name: envoy
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 10000
      targetPort: 10000
      nodePort: 31000
  selector:
    app: envoy
