stuff/podman-k8s/runme/httpbin.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: httpbin1
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: httpbin1
  name: httpbin1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin1
  template:
    metadata:
      labels:
        app: httpbin1
    spec:
      containers:
      - image: docker.io/kennethreitz/httpbin:latest
        imagePullPolicy: IfNotPresent
        name: httpbin1
        ports:
        - containerPort: 8000
---
kind: Service
apiVersion: v1
metadata:
  name: httpbin1
  namespace: httpbin1
spec:
  selector:
    app: httpbin1
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
---
kind: Namespace
apiVersion: v1
metadata:
  name: httpbin2
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: httpbin2
  name: httpbin2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin2
  template:
    metadata:
      labels:
        app: httpbin2
    spec:
      containers:
        - image: docker.io/kennethreitz/httpbin:latest
          imagePullPolicy: IfNotPresent
          name: httpbin2
          ports:
            - containerPort: 8000
---
kind: Service
apiVersion: v1
metadata:
  name: httpbin2
  namespace: httpbin2
spec:
  selector:
    app: httpbin2
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
